# easy-recommender

./: .gitignore  .tool-versions  HowToUseLightFM.md  Makefile  README.md  convert_movielens.py  download.py  example.py  main.ipynb  main.py  pyproject.toml  sample.ipynb  sandbox.ipynb  sandbox2.py  sandbox3.ipynb  test_convert_movielens.py
.ipynb_checkpoints/: sandbox3-checkpoint.ipynb
easy_recommender/: __init__.py  recommender.py
