[tool.poetry]
name = "easy-recommender"
version = "0.1.0"
description = "A simple recommendation system using implicit library"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "easy_recommender"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
numpy = "^1.24.0"
implicit = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
jupyter = "^1.0.0"
ipykernel = "^6.0.0"
jupyterlab = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
