[project]
name = "easy-recommender"
version = "0.1.0"
description = "A simple recommendation system using implicit library"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "implicit>=0.7.0"
]

[project.scripts]
sandbox2 = "sandbox2:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "jupyterlab>=4.0.0"
]

[tool.poetry]
packages = [{include = "easy_recommender"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
